--- a/app/views/courts/index.html.erb
+++ b/app/views/courts/index.html.erb
@@ -1,2 +1,15 @@
 <h1>Courts#index</h1>
-<p>Find me in app/views/courts/index.html.erb</p>
+<div class="container">
+	<div class="row">
+		<% @courts.each do |court| %>
+			<div class="col-xs-3 box">
+				<%= link_to court.name, court %>
+				<%= link_to(image_tag(court.Picture_id),court) %> 
+				<%=  court.Water%>
+				<%=  court.Light%>
+				<%=  court.Membership%>
+			</div>
+			<% end %>
+	</div>
+</div>
+	
