--- a/app/views/courts/index.html.erb
+++ b/app/views/courts/index.html.erb
@@ -5,9 +5,11 @@
 			<div class="col-xs-3 box">
 				<%= link_to court.name, court %>
 				<%= link_to(image_tag(court.Picture_id),court) %> 
-				<%=  court.Water%>
-				<%=  court.Light%>
-				<%=  court.Membership%>
+				<%= court.Water%>
+				<%= court.Light%>
+				<%= court.Membership%>
+				<%= court.Address%>
+				<%= court.comments%>
 			</div>
 			<% end %>
 	</div>
