--- a/app/views/courts/show.html.erb
+++ b/app/views/courts/show.html.erb
@@ -1,2 +1,6 @@
 <h1>Courts#show</h1>
 <p>Find me in app/views/courts/show.html.erb</p>
+
+<div id="map-container">
+  <div id="map-canvas"></div>
+</div>
