--- a/app/views/courts/show.html.erb
+++ b/app/views/courts/show.html.erb
@@ -1,6 +1,18 @@
-<h1>Courts#show</h1>
-<p>Find me in app/views/courts/show.html.erb</p>
+<h1><%= @court.name %></h1>
 
-<div id="map-container">
-  <div id="map-canvas"></div>
-</div>
+  <div style='width: 800px;'>
+    <div id="map" style='width: 400px; height: 400px;'></div>
+  </div>
+<script type="text/javascript">
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+   markers = handler.addMarkers(<%=raw @hash.to_json %>);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+	handler.getMap().setZoom(14); 
+	});
+</script>
+
+<h1><%= @court.picture_id %></h1>
+<h2><%= @court.latitude %></h2>
+<h2><%= @court.longitude %></h2>
