--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="">Pickup</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -28,8 +28,14 @@
           </ul>
         </li>
       </ul>
-
-      </ul>
-    </div><!-- /.navbar-collapse -->
+    <div id="user_nav">
+  <% if current_user %>
+    Signed in as <strong><%= current_user.name %></strong>!
+    <%= image_tag(current_user.image) %> 
+    <%= link_to "Sign out", logout_path, id: "sign_out" %>
+  <% else %>
+    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+  <% end %>
+    </div>
   </div><!-- /.container-fluid -->
 </nav>
